--- a/pedido-movel/src/pages/produtos/produtos.html
+++ b/pedido-movel/src/pages/produtos/produtos.html
@@ -34,20 +34,15 @@
           <ion-col class="col-80px" (click)="alterarSelecaoProduto(produto)">
             <img src="/assets/img/geladeira.png" style="width: 70px; height: 70px;">
           </ion-col>
-          <ion-col col-4 col-auto (click)="alterarSelecaoProduto(produto)">
-            <span class="label-column-list">Item</span><br>
+          <ion-col col-5 col-auto (click)="alterarSelecaoProduto(produto)" align-self-center>
             <span class="produto-column-list-produtos" style="width: 100%">{{produto.nome}}</span><br>
-            <span class="label-column-list">{{produto.nome}}</span>
-          </ion-col>
-          <ion-col (click)="alterarSelecaoProduto(produto)">
-            <span class="label-column-list">Cod</span><br>
-            <span class="item-column-list-produtos">{{produto.codigo}}</span>
+            <span class="label-column-list">Cod: {{produto.codigo}}</span>
           </ion-col>
           <ion-col (click)="alterarSelecaoProduto(produto)">
             <span class="label-column-list">Estoque</span><br>
             <span class="item-column-list-produtos">{{produto.quantidade}}</span>
           </ion-col>
-          <ion-col (click)="alterarSelecaoProduto(produto)">
+          <ion-col col-2 (click)="alterarSelecaoProduto(produto)">
             <span class="label-column-list">Preço</span><br>
             <span class="produto-column-list-produtos">R$ 977,50</span>
           </ion-col>
