Tela de pedido e layout ios
- Ajustando a coluna quantidade para ficar com tamanho fixo
- Substituindo as propriedades do layout também para o ios

--- a/pedido-movel/src/pages/pedido/pedido.html
+++ b/pedido-movel/src/pages/pedido/pedido.html
@@ -22,7 +22,7 @@
             <span class="produto-column-list-produtos">{{produto.nome}}</span><br>
             <span class="label-column-list">Cod: {{produto.codigo}}</span>
           </ion-col>
-          <ion-col>
+          <ion-col class="col-80px">
             <span class="label-column-list">Qtde</span><br>
             <span class="item-column-list-produtos">{{produto.quantidade}}</span>
           </ion-col>
@@ -45,7 +45,7 @@
           </ion-col>
           <ion-col col-4 col-auto >
           </ion-col>
-          <ion-col>
+          <ion-col class="col-80px">
             <span>Subtotal</span>
           </ion-col>
           <ion-col col-2>
@@ -67,12 +67,12 @@
           </ion-col>
           <ion-col col-auto col-4>
           </ion-col>
-          <ion-col>
+          <ion-col class="col-80px">
             <span>Total</span>
           </ion-col>
-          <ion-col col-2> 
+          <ion-col col-3> 
             <span class="label-column-list">à vista</span><br>
-            <h1 class="produto-column-list-produtos">R$ 977,50</h1>
+            <h1>R$ 977,50</h1>
           </ion-col>
           <ion-col col-2>
             <span class="label-column-list">à prazo</span><br>
