--- a/pedido-movel/src/pages/produtos/produtos.html
+++ b/pedido-movel/src/pages/produtos/produtos.html
@@ -44,7 +44,7 @@
           </ion-col>
           <ion-col col-2 (click)="alterarSelecaoProduto(produto)">
             <span class="label-column-list">Preço</span><br>
-            <span class="produto-column-list-produtos">R$ 977,50</span>
+            <span class="produto-column-list-produtos">{{produto.preco | brcurrency}}</span>
           </ion-col>
           <ion-col align-self-center>
             <button (click)="exibirDetalhes()" class="button-detail">Detalhes</button>
