--- a/pedido-movel/src/pages/produtos/produtos.html
+++ b/pedido-movel/src/pages/produtos/produtos.html
@@ -15,45 +15,7 @@
 <ion-content>
   <ion-searchbar (ionInput)="consultarProdutos($event)"></ion-searchbar>
 
-  <ion-card>
-    <ion-card-header>
-      PRODUTOS
-      <button (click)="addProducts()" ion-button round small style="float: right;">
-          <span class="fa fa-fw fa-shopping-basket"></span>
-          <span>Adicionar Item(ns)</span>
-      </button>
-    </ion-card-header>
-    <ion-card-content>
-      <div class="barra-divisoria"></div>
-
-      <ion-grid>
-        <ion-row row *ngFor="let produto of produtos" class="card-item-produto-edges" [ngClass]="{'produto-selecionado': produto.selecionado}">
-          <ion-col class="col-22px" (click)="alterarSelecaoProduto(produto)">
-            <input type="checkbox" [(ngModel)]="produto.selecionado">
-          </ion-col>
-          <ion-col class="col-80px" (click)="alterarSelecaoProduto(produto)">
-            <img src="/assets/img/geladeira.png" style="width: 70px; height: 70px;">
-          </ion-col>
-          <ion-col col-5 col-auto (click)="alterarSelecaoProduto(produto)" align-self-center>
-            <span class="produto-column-list-produtos" style="width: 100%">{{produto.nome}}</span><br>
-            <span class="label-column-list">Cod: {{produto.codigo}}</span>
-          </ion-col>
-          <ion-col (click)="alterarSelecaoProduto(produto)">
-            <span class="label-column-list">Estoque</span><br>
-            <span class="item-column-list-produtos">{{produto.quantidade}}</span>
-          </ion-col>
-          <ion-col col-2 (click)="alterarSelecaoProduto(produto)">
-            <span class="label-column-list">Preço</span><br>
-            <span class="produto-column-list-produtos">{{produto.preco | brcurrency}}</span>
-          </ion-col>
-          <ion-col align-self-center>
-            <button (click)="exibirDetalhes()" class="button-detail">Detalhes</button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-
-    </ion-card-content>
-  </ion-card>
+  <product-list cardTitle="PRODUTOS" [products]="produtos"></product-list>
 
 </ion-content>
 
