--- a/pedido-movel/src/pages/cliente/cliente.html
+++ b/pedido-movel/src/pages/cliente/cliente.html
@@ -87,10 +87,10 @@
 
             <div style="margin-top: 50px;">
               <div style="display: inline-block; margin-right: 10px;">
-                <button class="botao-primario" (click)="salvar(formCliente.value, formCliente.valid)">Salvar</button>
+                <button ion-button color="bostonblue" class="botao-primario" (click)="salvar(formCliente.value, formCliente.valid)">Salvar</button>
               </div>
               <div style="display: inline-block;">
-                <button class="botao-secundario" type="button" (click)="cancelar()">Cancelar</button>
+                <button ion-button color="gothic" class="botao-secundario" type="button" (click)="cancelar()">Cancelar</button>
               </div>
             </div>
           </form>
