imagens dos produtos

--- a/pedido-movel/src/pages/pedido/pedido.html
+++ b/pedido-movel/src/pages/pedido/pedido.html
@@ -16,7 +16,7 @@
       <ion-grid>
         <ion-row row *ngFor="let produto of getProdutos()" class="card-item-produto-edges" nowrap>
           <ion-col class="col-80px" hideWhen="small">
-            <img src="/assets/img/geladeira.png" style="width: 70px; height: 70px;">
+            <img src="assets/img/geladeira.png" style="width: 70px; height: 70px;">
           </ion-col>
           <ion-col col-4 col-auto align-self-center>
             <span class="produto-column-list-produtos">{{produto.nome}}</span><br>
