--- a/pedido-movel/src/pages/pedido/pedido.html
+++ b/pedido-movel/src/pages/pedido/pedido.html
@@ -24,7 +24,7 @@
           </ion-col>
           <ion-col class="col-80px">
             <span class="label-column-list">Qtde</span><br>
-            <span class="item-column-list-produtos">{{produto.quantidade}}</span>
+            <span class="item-column-list-produtos">{{produto.quantidadeSelecionada}}</span>
             <span class="fa fa-fw fa-times" (click)="removerProduto(produto)"></span>
           </ion-col>
           <ion-col col-2>
