--- a/pedido-movel/src/pages/detalheproduto/detalheproduto.html
+++ b/pedido-movel/src/pages/detalheproduto/detalheproduto.html
@@ -14,24 +14,44 @@
       <div class="barra-divisoria"></div>
 
       <div class="card-produto-detail-content">
-        <div class="row" style="height: 70%">
+        <div class="row" style="height: 350px;">
           <div style="display: inline-block" style="width: 50%; height: 100%; padding: 15px;">
             <img src="assets/img/geladeira.png" style="width: 100%; height: 100%;">
           </div>
           <div style="display: inline-block" style="width: 50%; height: 100%; padding: 15px;">
-            <div class="row"> 
+            <div class="row">
               <span class="nome-produto-card-detail">{{produtoSelecionado.nome}}</span>
             </div>
-            <div class="row"> 
-              
+            <div class="row">
+
             </div>
           </div>
         </div>
-        <div class="row" style="height: 30%; padding: 15px;">
-          <span class="complemento-detail-produto">{{produtoSelecionado.complemento}}</span>
+        <div class="row" style="padding: 5px 10px 5px 10px;">
           
+          <div padding style="width: 50%">
+            <ion-segment [(ngModel)]="opt">
+              <ion-segment-button value="dsc">
+                Descrição
+              </ion-segment-button>
+              <ion-segment-button value="tec">
+                Informações técnicas
+              </ion-segment-button>
+            </ion-segment>
+          </div>
+
+          <div [ngSwitch]="opt">
+            <ion-list *ngSwitchCase="'dsc'">
+              <div class="descricao-detail-produto">{{produtoSelecionado.complemento}}</div>
+            </ion-list>
+            <ion-list *ngSwitchCase="'tec'">
+              <div class="descricao-detail-produto">{{produtoSelecionado.complemento}}</div>
+            </ion-list>
+          </div>
+
         </div>
       </div>
+
     </ion-card-content>
   </ion-card>
 
