--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -15,8 +15,9 @@
   </ion-navbar>
 </ion-header>
 
+
 <ion-content>
- 
+  
   <ion-card>
     <ion-card-header>
       CAMPANHA
@@ -48,6 +49,22 @@
   </ion-card>
 
 </ion-content>
-<app-footer>
-  
-</app-footer>
+
+<ion-footer>
+  <ion-toolbar  style="min-height: 60px">
+    <ion-buttons>
+      <button ion-button style="width: 45%;" (click)="irParaCadastroClientes()">
+        <span class="fa fa-fw fa-user-plus buttons-footer"></span>
+        <span class="buttons-text">
+          Adicionar Cliente
+        </span>
+      </button>
+      <button ion-button style="width: 45%;" (click)="irParaTodosClientes()">
+        <span class="fa fa-fw fa-users buttons-footer"></span>
+        <span class="buttons-text">
+          Todos os Clientes
+        </span>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
