--- a/pedido-movel/src/pages/detalheproduto/detalheproduto.html
+++ b/pedido-movel/src/pages/detalheproduto/detalheproduto.html
@@ -45,7 +45,7 @@
               <div class="descricao-detail-produto">{{produtoSelecionado.complemento}}</div>
             </ion-list>
             <ion-list *ngSwitchCase="'tec'">
-              <div class="descricao-detail-produto">{{produtoSelecionado.complemento}}</div>
+              <div class="descricao-detail-produto">Peso: 10kg - Dimensões: </div>
             </ion-list>
           </div>
 
