--- a/pedido-movel/src/pages/produtos/produtos.html
+++ b/pedido-movel/src/pages/produtos/produtos.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-searchbar (ionInput)="consultarProdutos($event)"></ion-searchbar>
+  <ion-searchbar #searchbar (ionInput)="consultarProdutos($event)"></ion-searchbar>
 
   <product-list cardTitle="PRODUTOS" [products]="produtos"></product-list>
 
