Tamanho da area de click da pesquisa
Aumentando tamanho da area de click do boão pesquisar

--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -2,7 +2,7 @@
   <ion-navbar>
     <div class="logo-default"></div>
     <ion-buttons end>
-      <button (click)="irParaProdutos()" ion-button>
+      <button (click)="irParaProdutos()" mergin ion-button>
         <span class="fa fa-fw fa-search buttons-header"></span>
       </button>
       <button (click)="irParaCarrinho()" ion-button>
